# cpp-bank-management

./: CMakeLists.txt  README.md
src/: account.cpp  account.h  available_user_actions.cpp  available_user_actions.h  bank.cpp  bank.h  custom_exceptions.h  main.cpp  plan.cpp  plan.h  program_action.cpp  program_action.h
src/collections/: account.cpp  account.h  bank.cpp  bank.h  plan.cpp  plan.h
src/db/: account_transactions_db_management.cpp  account_transactions_db_management.h  accounts_db_management.cpp  accounts_db_management.h  db_management.cpp  db_management.h  plans_db_management.cpp  plans_db_management.h
src/db/filters/: db_account_transactions_filter.cpp  db_account_transactions_filter.h  db_filter.cpp  db_filter.h
src/db/schemas/: accounts_db.json
src/extensions/: boost_gregorian_extensions.cpp  boost_gregorian_extensions.h  custom_concepts.h  custom_exceptions.h  custom_validations.h  files_extensions.h  hash_functions.h  my_shell.h  ranges_extensions.h  std_extensions.h
src/external_tools/iterator_helpers/: use_collection_iterator.h
src/external_tools/multimap/: keys_management.h  multimap.h
src/external_tools/template_base_class_collection/: template_base_container.h  (+1 more)
src/program_flow/: available_user_actions.cpp  available_user_actions.h  plan_management.cpp  plan_management.h  program_action.cpp  program_action.h  shadow_updates.cpp  shadow_updates.h
src/program_flow_collections/: account.cpp  account.h  bank.cpp  bank.h  plan.cpp  plan.h
src/structures/: output_logger_manager.cpp  output_logger_manager.h
(+20 files in other folders)
